package com.bsuir.kareley.dto;

public class CourseDto {
}
