package com.bsuir.kareley.entity;

public enum OrderStatus {

    PROCESSING,
    APPROVED,
    CANCELED

}
